# Algae

./: .gitignore  COPYING  INSTALL  Makefile  Makefile.in  NEWS  PROBLEMS  README  VERSION  aclocal.m4  algae.spec.in  compile-sh  config.h  config.h.in  config.status  configure  configure.in  f77-sh  f77-sh.in  knr2ansi.py  mkinstalldirs  rc0  rc0.in
arpack/: Makefile  Makefile.in  README  dgetv0.f  dnaitr.f  dnapps.f  dnaup2.f  dnaupd.f  dnconv.f  dneigh.f  dngets.f  dsaitr.f  dsapps.f  dsaup2.f  dsaupd.f  dsconv.f  dseigt.f  dsgets.f  zgetv0.f  znaitr.f  znapps.f  znaup2.f  znaupd.f  zneigh.f  zngets.f
autom4te.cache/: output.0  requests  traces.0
blas/: Makefile  Makefile.in  README
confstatlrWnlx/: defines.sed  undefs.sed
doc/: BUILTIN_INTERFACE.md  FAQ  Makefile  Makefile.in  algae.1  algae.1.in  algae.html  algae.info  algae.info-1  algae.info-2  algae.info-3  algae.info-4  algae.info-5  algae.info-6  algae.info-7  algae.ps  algae.texinfo  algae.texinfo.in  algae_1.html  algae_10.html  algae_11.html  algae_12.html  algae_13.html  algae_14.html  algae_15.html  algae_16.html  algae_2.html  algae_3.html  algae_4.html  algae_5.html  algae_6.html  algae_7.html  algae_8.html  algae_9.html  algae_abt.html  algae_fig.eps  algae_toc.html  index.html  index.html.in  info.db
etc/: Makefile  Makefile.in  algae2to3  atags  atags.1
examples/: Makefile  Makefile.in
fpe/: Makefile  Makefile.in  alpha-dec-osf3.0.c  alpha-unknown-freebsd4.8.c  apollo.c  darwin.c  fpe.c  hppa1.1-hp-hpux9.c  i386-unknown-sysv4.2.c  i586-unknown-linux.c  i686-pc-linux-gnu.c  mips-dec-ultrix4.4.c  mips-sgi-irix5.2.c  mips.c  rs6000-ibm-aix3.2.5.c  sparc-sun-solaris2.3.c  sparc-sun-solaris2.8.c  sparc-sun-sunos4.1.c  titan.c  ymp-cray-unicos.c
lapack/: Makefile  Makefile.in  README  dgebd2.f  dgeev.f  dgesvd.f  dggbal.f  zgebd2.f  zgeev.f  zgesvd.f  zggbal.f
src/: DEPENDS  Makefile  Makefile.bak  Makefile.in  abs.c  abs.h  acos.c  acos.h  add.c  add.h  algae  algae-gtk  algae.h  algae.skel  algae_api.h  append.c  append.h  apply.c  apply.h  arpack.c  arpack.h  arpack.h.in  asin.c  asin.h  assign.c  assign.c.m4  assign.h  atan.c  atan.h  band.c  band.h  bcs.f  bcs.h  bcs.h.in  bcs_sp.f  bdiag.c  bdiag.h  binop.c  binop.h  blas.f  (+223 more)
superlu/: Cnames.h  DEPENDS  Makefile  Makefile.in  README  README.changes  blas_prototypes.h  dcolumn_bmod.c  dgstrf.c  dgstrs.c  dmemory.c  dpanel_bmod.c  dpivotL.c  dreadhb.c  dsnode_bmod.c  dsp_blas2.c  dsp_defs.h  dutil.c  get_perm_c.c  izmax1.c  sp_coletree.c  sp_ienv.c  sp_preorder.c  ssp_defs.h  supermatrix.h  util.h  zcolumn_bmod.c  zgstrf.c  zgstrs.c  zlacon.c  zmemory.c  zpanel_bmod.c  zpivotL.c  zreadhb.c  zsnode_bmod.c  zsp_blas2.c  zsp_defs.h  zutil.c
test/: DATA  DATA.in  DATA.mat  DATA.mat.in  DATA1  DATA1.in  Makefile  Makefile.in  error_tests  trap_tests
timing/: Makefile  Makefile.in
tools/: Makefile  Makefile.in  lib-Makefile  lib-Makefile.in  tools.algae
